2007-08-01  Sven Schuetz

        * backend_sfcb.c:
        Fixed 1763178 GetClass operation failure

2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>

	* mofs.l:
	Fixed 1741211 cleanup compiler warnings

2007-05-03  Chris Abbey

	* configure.ac:
	Fixed 1709042: added dependency to sfcUtil

2007-03-23  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* configure.ac: 
	Addition for 1686170: instance comparison not supported.
	Needed to adjust the include path for the sfcb backend case.

2007-03-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* hash.h: 
	Fixed 1683860: Error compiling CIM v2.14Experimental
	The symbol hashtable was too small for 2.14e, has been increased
	by factor 4.

2007-02-22  Sven Schuetz

	* backend_sfcb.c:
	Adopted change in sfcb function name (normalizeObjectpath)

2007-01-04  Sven Schuetz

	* backend_sfcb.c:
	Fixed 1624528: sfcb getclass doesn't return methods

2007-01-04  Sven Schuetz

	* backend_sfcb.c, symtab.c:
	Fixed 1616463: mofc doesn't process REF type properties

2007-01-03  Sven Schuetz

	* backend_sfcb.c:
	Partially fixed 1624528: sfcb getclass doesn't return methods

2006-12-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* backend_sfcb.c, configure.ac, symtab.c: 
	Combined fix for 1601274, 1614898: new option --enable-namespace-kludge
	for the support of legacy __namespace class compilation.

2006-12-15  Sven Schuetz

	* backend_sfcb.c, symtab.c:
	Fixed 1614898: coredumps for instance of undefined class

2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* configure.ac: 
	Fixed 1605522: added warning if no yacc or lex found.
	
2006-11-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* symtab.c: 
	Fixed 1599675: endless loop after class redefinition.

2006-11-07  Sven Schuetz
	* backend_sfcb.c:
	Fixed 1587752: support for qualifier and instance swapping

2006-10-27  Sven Schuetz