@@ -5,6 +5,7 @@ Bugs fixed:
 - 1709042 build system cleanup
 - 1741211 Fixed cleanup compiler warnings
 - 1763178 Fixed sfcb GetClass operation failure
+- 1685254 Fixed sfcb does not return REFERENCECLASS in GetClass
 
 Changes in 0.8.2
 ================
